# rust--playground

./: note.md
1_hello_world/: main.rs
3_guessing_game/guessing_game/: Cargo.toml
folder_test/: Cargo.toml
folder_test/src/: main.rs
handling_form_submit_events/: Cargo.toml
handling_form_submit_events/src/: lib.rs
handling_form_submit_events/src/components/molecules/: custom_form.rs
http_post_requests/: Cargo.toml
linking_to_pages/src/: lib.rs
methods/src/: main.rs
oop_rest_api/: Cargo.toml
oop_rest_api/src/: main.rs
oop_struct_cylinder/: Cargo.toml
oop_struct_cylinder/src/: main.rs
programattic_linking_to_pages/: Cargo.toml
programattic_linking_to_pages/src/: lib.rs
r10_structure/: Cargo.toml
r10_structure/src/: main.rs
r4_variable_mutability/: Cargo.toml
r4_variable_mutability/src/: main.rs
r5_variable_shadowing/: Cargo.toml
r6_scalar_data_type/: Cargo.toml
r7_compound_data_type/: Cargo.toml
r8_functions/: Cargo.toml
r9_http_req/: Cargo.toml
result_tubofish/: Cargo.toml
shape_3d_formula_lib_test/: Cargo.toml
surjopayplugin/: Cargo.toml
surjopayplugin/src/: lib.rs  main.rs  router.rs
surjopayplugin/src/components/: mod.rs
surjopayplugin/src/components/customer_info/: customerinfo_form.rs  display_customerinfo.rs  mod.rs
surjopayplugin/src/components/customer_info/stores/: customerinfo_store.rs  mod.rs
surjopayplugin/src/components/pages/: formpage.rs  hello.rs  mod.rs  showformInfopage.rs
test_my_crate/: Cargo.toml
test_rust_program/: Cargo.toml
yew-app/: Cargo.toml  index.html
yewtestapp/: Cargo.toml
(+37 files in other folders)
