[package]
name = "introduction_to_yewrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
gloo = "0.8.0"
stylist = { version = "0.10.1", features = ["yew"]} #for css style
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlInputElement"] }