[package]
name = "surjopayplugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
stylist = { version = "0.10.0", features = ["yew"]}
gloo = "0.8.0"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.60", features = ["HtmlInputElement"] }
yew-router = "0.16.0"
yewdux = "0.8.2"